Se creó con Colab

--- a/Caracterización.ipynb
+++ b/Caracterización.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyJiD65tFca59mGLNZ0qq4",
+      "authorship_tag": "ABX9TyO65xr6nfMfvkVXmLE1/X1b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "qcfaHARo64Do"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qcfaHARo64Do",
+        "outputId": "9eccb13a-12fe-48a1-e902-bb083e08412b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello\")"
+      ]
     }
   ]
 }
