--- a/Caracterización.ipynb
+++ b/Caracterización.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO65xr6nfMfvkVXmLE1/X1b",
+      "authorship_tag": "ABX9TyMw5U7vh1o77zxJgUXX7Jvz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,27 +27,22 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qcfaHARo64Do",
-        "outputId": "9eccb13a-12fe-48a1-e902-bb083e08412b"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "print(\"Hello\")"
-      ]
+        "##**Caso de estudio**"
+      ],
+      "metadata": {
+        "id": "VUBZHSF78Yw1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qcfaHARo64Do"
+      },
+      "outputs": [],
+      "source": []
     }
   ]
 }
